[package]
name = "meal-exchange-site"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-session = { version = "0.6", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.17"  # or the latest version available
uuid = { version = "1", features = ["v4"] }